--- a/config/application.yml
+++ b/config/application.yml
@@ -17,25 +17,11 @@ test:
   type: aliyun-oss
   aliyun-oss:
     endpoint:
-    access_key_id:
-    access_key_secret:
-    bucket_name:
+    accessKeyId:
+    accessKeySecret:
+    bucketName:
   uploads:
     # no with extension
     filename: "test"
     dirs:
       - "file path"
-
-#cron:
-#  blog: "*/4 * * * * *"
-#blog:
-#  type: aliyun-oss
-#  aliyun-oss:
-#    endpoint:
-#    accessKeyId:
-#    accessKeySecret:
-#    bucketName:
-#  uploads:
-#    filename:
-#    dirs:
-#      - ""
