--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 WORKDIR /app
 ENV FLAG=""
-COPY go-backups .
-COPY ../config .
+COPY ./go-backups .
+COPY ./config .
 ENTRYPOINT /app/go-backups ${FLAG}
