--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,10 @@
-FROM scratch
+FROM alpine
 WORKDIR /app
 RUN mkdir ./config
 ENV FLAG=""
 COPY ./go-backups .
 COPY ./config/*.yaml ./config
-RUN  ls
+RUN  ls -al
+RUN cd config
+RUN ls -al
 ENTRYPOINT /app/go-backups ${FLAG}
