--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine
 WORKDIR /app
-RUN mkdir ./config
+RUN mkdir config
 ENV FLAG=""
-COPY ./go-backups .
-COPY ./config/*.yaml ./config
+COPY go-backups .
 RUN  ls -al
+COPY config/*.yaml ./config
 RUN cd config
 RUN ls -al
 ENTRYPOINT /app/go-backups ${FLAG}
