--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM scratch
-WORKDIR /app/config
+FROM alpine
 WORKDIR /app
+RUN mkdir config
 ENV FLAG=""
 COPY go-backups .
 COPY config/application.yml ./config/
