--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,14 @@
-FROM alpine
+FROM golang:1.16-alpine as build
+RUN apk --no-cache add tzdata
 WORKDIR /app
-RUN mkdir config
+ADD go-backups .
+ADD config ./config
+
+FROM alpine as final
+WORKDIR /app
+COPY --from=build /app/go-backups .
+COPY --from=build /app/config ./config
+COPY --from=build /usr/share/zoneinfo /usr/share/zoneinfo
+ENV TZ=Asia/Shanghai
 ENV FLAG=""
-COPY go-backups .
-COPY config/application.yml ./config/
 ENTRYPOINT /app/go-backups ${FLAG}
