--- a/config/application.yml
+++ b/config/application.yml
@@ -1,14 +1,24 @@
+# cron
 cron:
+  # upload name and Crone expression
+  # see github.com/robfig/cron
   blog: "*/4 * * * * *"
+# upload name
 blog:
+  # type of upload server [git|ali-oss|qiniu-oss...]
   type: git
+  # type of upload server
   git:
+    # compress type [zip|tar...]
     compress: zip
     url:
     username:
     email:
     token:
+  # uploads
   uploads:
+    # compress name with not extension
     filename:
+    # compression directory path
     dirs:
       - ""
