--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**'
+      - "!**.md"
   pull_request:
+    paths:
+      - '**'
+      - '!**.md'
 jobs:
   build:
     runs-on: ubuntu-latest
